# cronosqt

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  webserver.cpp  webserver.h  websocketserver.cpp  websocketserver.h
